[package]
name = "my_lib"
version = "0.1.0"
authors = ["Akniet Maulen"]
license = "Apache-2.0"
homepage = "https://github.com/aknietmaulen/rustlibrary1"
repository = "https://github.com/aknietmaulen/rustlibrary1"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
