[package]
name = "my_lib_akniet"
version = "0.1.0"
authors = ["Akniet Maulen"]
license = "Apache-2.0"
homepage = "https://github.com/aknietmaulen/my_lib_akniet"
repository = "https://github.com/aknietmaulen/my_lib_akniet"
description = "A library for sorting"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
